<resources>
    <string name="app_name">美食菜谱</string>

    <!-- Strings related to login -->

    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_phone_number">手机号码无效</string>
    <string name="error_invalid_password_null">密码不能为空</string>
    <string name="error_invalid_password_length">密码长度为6到16位</string>
    <string name="error_incorrect_password">用户名或密码错误</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="text_textview_title">标题</string>
    <string name="text_action_sign_in">登录</string>
    <string name="text_action_tv_register">注册</string>
    <string name="text_action_tv_lost_password">忘记密码？</string>
    <string name="text_mine_person_info">个人资料</string>
    <string name="text_mine_about">关于我们</string>
    <string name="text_mine_advice">意见反馈</string>
    <string name="text_mine_clear_cache">清除缓存</string>
    <string name="text_mine_alter_password">修改密码</string>
    <string name="text_mine_exit">退出登录</string>
    <string name="text_mine_about_content">\u3000\u3000针对于现在人们对生活质量的要求的提高，对生活的享受的提高，这款阅读杂志的app应运而生，人们在闲暇时光，或者感觉有压力的时候可以打开我们的app看看上面的美文杂志，杂志的类型主要是以图片的形式表现出来的，有文字，又有配图，吸引用户的眼球，让用户忘却一些烦心的事，全心的投入到我们的杂志当中来，让用户放松放松。我们追求卓越的产品品质以及完美的用户体验。</string>
    <string name="text_back">返回</string>
    <string name="text_personal_info">个人信息</string>
    <string name="text_hint_feedback_content">请输入您遇到的问题和建议，我们将不断改进，至少输入15个字</string>
    <string name="text_feedback">问题和建议</string>
    <string name="text_call">昵称</string>
    <string name="text_hint_contact">请输入您的联系方式</string>
    <string name="text_limit_character">至少输入15个字</string>
    <string name="text_hint_call">请输入您的称呼</string>
    <string name="text_input_password">请输入密码</string>
    <string name="text_correct_password">密码长度必须在在6-16位</string>
    <string name="text_phone_number">请输入手机号码</string>
    <string name="text_correct_phone">请输入正确的手机号码</string>
    <string name="text_man">男</string>
    <string name="text_famale">女</string>
    <string name="text_birthday">请选择正确的日期</string>
    <string name="text_pickphoto_from_album">从相册选择图片</string>
    <string name="text_take_photo">拍照</string>
    <string name="text_yes">放弃修改</string>
    <string name="text_no">继续修改</string>
    <string name="text_immediately_login">立即登录</string>
    <string name="text_nikename">昵称</string>
    <string name="text_update">检查更新</string>
    <string name="text_cancel">取消</string>
    <string name="text_affirm">确认</string>



    <string name="text_failed_msg">系统异常,请检查您的网络</string>
    <string name="text_success_msg">操作成功</string>
    <string name="text_operate_success">操作成功</string>
    <string name="text_operate_failed">操作失败</string>
    <string name="text_sms_login">短信快捷登录</string>
    <string name="text_login_success">登录成功</string>
    <string name="text_not_exist_user">用户不存在</string>
    <string name="text_register_success">注册成功</string>
    <string name="text_register_failed">注册失败</string>
    <string name="text_phone_exist">该手机号已经被注册</string>
    <string name="text_phone_not_exist">用户不存在</string>
    <string name="text_get_verify_code">获取验证码成功</string>
    <string name="text_sms_code">请输入验证码</string>
    <string name="text_get_code">获取验证码</string>
    <string name="text_login_failed">登录失败</string>
    <string name="text_login_now">正在登录,请稍后...</string>
    <string name="text_modify_password">修改密码</string>
    <string name="text_verify_code">验证码</string>
    <string name="text_sure_modify">确认修改</string>
    <string name="text_modify_success">修改成功</string>
    <string name="text_modify_failed">修改失败</string>
    <string name="text_click_login_register">点击登录或注册</string>
    <string name="text_account_level">等级</string>
    <string name="text_mine_look_info">查看资料</string>
    <string name="text_mine_record">美食足迹</string>
    <string name="text_mine_collect">我的收藏</string>
    <string name="text_mine_comment">我的评论</string>
    <string name="text_mine_point">我的积分</string>
    <string name="text_mine_menu">我的菜谱</string>
    <string name="text_mine_album">我的相册</string>
    <string name="text_mine_system">系统设置</string>
    <string name="text_mine_not_sign">签到</string>
    <string name="text_mine_sign">已签到</string>
    <string name="text_mine_menus">菜谱</string>
    <string name="text_mine_sign_failed">签到失败</string>
    <string name="text_mine_sign_success">签到成功</string>
    <string name="text_mine_collects">收藏</string>
    <string name="text_mine_albums">相册</string>
    
    
    <string name="text_system_setting">设置</string>
    <string name="text_system_account">账号</string>
    <string name="text_system_my_info">我的资料</string>
    <string name="text_system_change_phone">更换手机</string>
    <string name="text_system_modify_password">修改密码</string>
    <string name="text_system_common">通用</string>
    <string name="text_system_clean_cache">清除缓存</string>
    <string name="text_system_about_us">关于我们</string>
    <string name="text_system_feedback">意见反馈</string>
    <string name="text_system_support">支持</string>
    <string name="text_system_update_version">版本更新</string>
    <string name="text_system_share_app">分享美食菜谱APP</string>
    <string name="text_system_logout">退出登录</string>
    <string name="text_user_name">昵称</string>
    <string name="text_user_real_name">子非鱼</string>
    <string name="text_user_sex">性别</string>
    <string name="text_user_real_sex">男</string>
    <string name="text_user_birth">生日</string>
    <string name="text_user_real_birth">1993-08-04</string>
    <string name="text_user_point">积分</string>
    <string name="text_user_real_point">0</string>
    <string name="text_user_level">等级</string>
    <string name="text_user_real_level">1级</string>
    <string name="text_input_user_name">请输入昵称</string>
    <string name="text_user_name_length">用户名最短为3个字符,最长为30个字符</string>
    <string name="text_permission_failed">应用获取读写权限失败,请到应用中重新获取</string>
    <string name="text_upload_progress">上传进度</string>
    <string name="text_change_icon_success">更换头像成功</string>
    <string name="text_change_icon_failed">更换头像失败</string>
    <string name="text_delete_success">删除成功</string>
    <string name="text_delete_failed">删除失败</string>
    <string name="text_comment_success">评论成功</string>
    <string name="text_comment_failed">评论失败</string>
    <string name="text_release_success">发布成功</string>
    <string name="text_release_failed">发布失败</string>
    
    <string name="text_mine">我的</string>
    <string name="text_shai_yi_shai">晒一晒</string>
    <string name="text_menu_introduce">非常喜欢这个虾烙，儿时的味道，妈妈的味道。小时候每逢中秋佳节，妈妈就会烙这种虾烙给我们解馋。超香超有爱。又到一年中秋季，让我又有了吃虾烙的念想，让我又回到了童年</string>
    <string name="text_search_hint">菜谱、食材</string>
    <string name="text_today_recommend">今日推荐</string>
    <string name="text_more">更多</string>
    <string name="text_menu_cover">请选择菜谱封面图片</string>
    <string name="text_menu_name">请输入菜谱名称</string>
    <string name="text_menu_type">请选择菜谱所属类别</string>
    <string name="text_menu_desc">说出美食的特色及故事</string>
    <string name="text_menu_cove_failed">上传菜谱封面失败</string>
    <string name="text_menu_cover_success">上传菜谱封面图片成功</string>
    <string name="text_please_feedback_content">请输入您要反馈的内容</string>
    <string name="text_confirm_msg">还有建议或意见未提交，是否确定离开呢？</string>
    <string name="text_commit_success">感谢您的反馈</string>
    <string name="text_commit_failed">提交失败</string>
    <string name="text_committing">正在提交中,请稍后再次提交</string>
    <string name="text_about_us">美食菜谱是由个人开发的一款菜谱分享与交流的应用。美食菜谱正朝着实用化不断前进，努力做成为全球最后欢迎的，最活跃的，成长性最好的中文菜谱应用。</string>
    <string name="text_confirm_logout">是否确定退出？</string>
    <string name="text_need_new_phone">请输入新的手机号码</string>
    <string name="text_phone_not_same">该手机号和获取验证码的的手机号不一致</string>
    <string name="text_update_name">修改昵称</string>
    <string name="text_my_point">我的积分</string>
    <string name="text_release_no_complete">尚未完成</string>
    <string name="text_already_complete">已完成</string>
    <string name="text_current_point">当前积分:</string>
    <string name="text_hot">快去围观热门吧</string>
    <string name="text_like_rank">点赞排行</string>
    <string name="text_collect_rank">收藏排行</string>
    <string name="text_look_rank">浏览排行</string>
    <string name="text_rank_title">XX排行</string>
    <string name="text_hot_menu">热门菜谱</string>
    <string name="text_hot_menu_load_complete">热门菜谱全部加载完成</string>
    <string name="text_loading">正在加载数据中...</string>
    <string name="text_home">首页</string>
    <string name="text_discover">发现</string>
    <string name="text_main_menu">菜谱</string>

    <integer name="actionId">1</integer>

</resources>
