<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_update_name"
        android:layout_marginLeft="15dp"
        android:textSize="@dimen/text_title_size"
        android:layout_marginTop="30dp"
        />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:id="@+id/til_code"
        >
    <EditText
        android:id="@+id/user_name"
        android:maxLength="30"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextAppearance="@color/color_red"
        android:hint="@string/text_user_name"
        android:inputType="text"
        android:maxLines="1"
        android:theme="@style/MyEditText"
        android:textSize="15sp"
        android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        >
        <Button
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:textColor="@color/color_white"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/text_affirm"
            android:background="@drawable/btn_login_selector"
            android:id="@+id/btn_sure" />
        <Button
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/text_cancel"
            android:background="@drawable/btn_login_selector"
            android:textColor="@color/color_white"
            />
    </LinearLayout>

</LinearLayout>