<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    >
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
        <com.wgf.cookbooks.view.CustomToolbar
            android:id="@+id/toolbar_back"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:toolbarTitle="@string/text_action_sign_in"
            />
        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="5dp"
            android:clickable="true"
            android:focusable="true"
            android:padding="5dp"
            android:text="@string/text_action_tv_register"
            android:textColor="@color/color_white"
            android:textSize="15sp"
            />
    </FrameLayout>

    <!-- Login progress -->
    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <AutoCompleteTextView
                        android:id="@+id/number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/text_phone_number"
                        android:inputType="number"
                        android:maxLength="11"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textSize="15sp"
                        android:theme="@style/MyEditText"
                        app:hintTextAppearance="@color/color_red"
                        />
                </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                >
                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_input_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLength="16"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="15sp"
                    android:theme="@style/MyEditText" />

            </android.support.design.widget.TextInputLayout>
            <Button
                android:id="@+id/number_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/btn_login_selector"
                android:text="@string/text_action_sign_in"
                android:textColor="@color/color_white"
                android:textSize="16sp"
                 />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="horizontal"
                >
                <TextView
                    android:id="@+id/tv_sms_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:focusable="true"
                    android:padding="5dp"
                    android:text="@string/text_sms_login"
                    android:textSize="13sp"
                     />
                <View
                    android:layout_width="1dp"
                    android:layout_height="10dp"
                    android:background="@color/color_btn_read"/>
                <TextView
                    android:id="@+id/tv_forget_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/text_action_tv_lost_password"
                    android:textSize="13sp"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

</LinearLayout>
